--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,10 @@
   background-color: #242424;
 }
 .app-container {
-  
+  /* background-color: blue; */
+  padding: 1%;
+}
+.categories-container {
+  margin-bottom: 5%;
+  /* background-color: green; */
 }
