--- a/src/components/Sharables.css
+++ b/src/components/Sharables.css
@@ -1,6 +1,27 @@
 .sharables-container {
-    border: solid 1px white !important;
-    margin: 2%;
-    padding: 2%;
-    /* background-color: blue; */
+    --bs-gutter-x: 0;
+}
+.fields-div {
+    padding: 2% 0 2% 7%;
+}
+.preview-border {
+    /* border: solid 1px white; */
+    margin: 5% 0 5% 0;
+}
+.categories-titles {
+    display: flex;
+    align-items: center;
+}
+.checkbox-category {
+    width: 18px;
+    height: 18px;
+    margin-right: 4px;
+    cursor: pointer;
+}
+.checkbox-category {
+    width: 18px;
+    height: 18px;
+    margin-right: 4px;
+    border-radius: 50%;
+    cursor: pointer;
 }
