--- a/src/components/SampleMenu.css
+++ b/src/components/SampleMenu.css
@@ -1,5 +1,5 @@
 .modal-div {
-    position: fixed;
+    /* position: fixed; */
     top: 0;
     left: 0;
     right: 0;
@@ -12,18 +12,37 @@
     align-items: center;
     z-index: 2000; /* Ensure it appears above other content */
   }
+/* Letter (A4) Format */
+.menu-items-container {
+  width: 210mm; /* A4 width */
+  height: 297mm; /* A4 height */
+  /* padding: 20mm; */
+  background: white;
+  color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin: auto;
+  overflow-y: auto; /* Scrollable if content exceeds */
+  font-family: Arial, sans-serif;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: flex-start;
+}
   .modal-confirmation {
     background: rgba(22, 19, 19, 0.93);
     /* background: rgb(239, 234, 234); */
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    width: 400px;
-    max-width: 90%;
+    /* width: 400px; */
+    /* max-width: 90%; */
   }
+  .category-title {
+    text-align: center;
+  }
+ 
   .confirm-text,
   .confirm-title {
-    text-align: center;
+    /* text-align: center; */
     color: white;
     margin: 1%;
   }
