--- a/src/components/SampleMenu.css
+++ b/src/components/SampleMenu.css
@@ -1,40 +1,32 @@
 .modal-div {
-  /* position: fixed; */
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(244, 240, 240, 0.615);
   color: white;
   /* background: rgba(0, 0, 0, 0.5); */
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2000; /* Ensure it appears above other content */
+  flex-direction: column;
+  /* width: 100%; */
+  margin: 0;
+  padding: 0;
 }
 /* Letter (A4) Format */
 .menu-items-container {
   width: 210mm; /* A4 width */
-  height: 297mm; /* A4 height */
+  height: 372mm; /* A4 height */
   /* padding: 20mm; */
-  background: white;
+  background: rgb(233, 210, 160);
   color: black;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   margin: auto;
-  overflow-y: auto; /* Scrollable if content exceeds */
   font-family: Arial, sans-serif;
   display: flex;
-  /* flex-direction: column; */
   justify-content: flex-start;
 }
 .modal-confirmation {
   background: rgba(22, 19, 19, 0.93);
-  /* background: rgb(239, 234, 234); */
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-  /* width: 400px; */
-  /* max-width: 90%; */
 }
 .category-title {
   text-align: center;
@@ -44,7 +36,6 @@
 .confirm-title {
   text-align: center;
   color: white;
-  /* margin: 1%; */
   margin: auto;
 }
 .menu-item-joined { /*look here for padding*/
@@ -63,7 +54,6 @@
   background-color: rgba(72, 15, 228, 0.92) !important;
   border-width: 1px;
   border-radius: 2em;
-  /* width: 100%; */
   margin: auto;
   color: rgb(220, 210, 210);
 }
@@ -75,3 +65,16 @@
   padding-left: 10%;
   padding-right: 10%;
 }
+/* 
+.page-break {
+  display: block;
+  height: 50px;  
+  background-color: transparent;  
+}
+
+.page-break-print {
+  page-break-before: always;  
+} */
+
+/* .menu-items-container {
+  margin-bottom: 20px; 
