--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,17 +1,15 @@
 .footer-container {
-    display: flex;
-    flex-direction: column;
-    padding: 2%;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for effect */
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for effect */
 }
 .footer-text {
-    text-align: center;
+  text-align: center;
 }
 .guy-fieri {
-    text-align: center;
+  text-align: center;
 }
