--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -4,9 +4,13 @@
     flex-direction: column;
     border: 1px solid white;
     background-color: black;
-    width: 40%;
+    width: 30%;
     margin: auto;
-    padding: 2%;
+    padding: 2% 0 2% 0;
+    border-radius: 10px;
+}
+.message {
+    text-align: center;
 }
 .btn-group {
     width: 40%;
