--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,10 @@
 .footer-container {
   display: flex;
   flex-direction: column;
+  flex: 1;
   position: absolute;
   bottom: 0;
-  left: 0;
+  /* left: 0; */
   background-color: #fff;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add shadow for effect */
 }
