--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -8,6 +8,7 @@
   /* width: 100%; */
   margin: 0;
   padding: 0;
+  /* position: relative; */
 }
 /* Letter (A4) Format */
 .menu-items-container-Regular {
@@ -21,6 +22,7 @@
   font-family: Arial, sans-serif;
   display: flex;
   justify-content: flex-start;
+  position: relative;
 }
 /* Custom Format */
 .menu-items-container-Custom {
