--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -1,90 +1,118 @@
-.modal-div {
-  color: white;
-  /* background: rgba(0, 0, 0, 0.5); */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  /* width: 100%; */
-  margin: 0;
-  padding: 0;
-  /* position: relative; */
+.row {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
 }
-/* Letter (A4) Format */
-.menu-items-container-Regular {
-  width: 210mm; /* A4 width */
-  height: 372mm; /* A4 height */
-  /* padding: 20mm; */
-  background: rgb(233, 210, 160);
-  color: black;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+
+.confirmation {
+  width: auto;
   margin: auto;
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: flex-start;
-  position: relative;
-}
-/* Custom Format */
-.menu-items-container-Custom {
-  width: 110mm; /* A4 width */
-  height: 372mm; /* A4 height */
-  /* padding: 20mm; */
-  background: rgb(233, 210, 160);
-  color: black;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  margin: auto;
-  font-family: Arial, sans-serif;
-  display: flex;
-  justify-content: flex-start;
-  position: relative;
-}
-.modal-confirmation {
   background: rgba(22, 19, 19, 0.93);
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
-.category-title {
-  text-align: center;
-}
-
 .confirm-text,
 .confirm-title {
   text-align: center;
   color: white;
   margin: auto;
+ 
 }
-.menu-item-joined { /*look here for padding*/
+
+.menu-items-container-Regular {
+  width: 279mm; 
+  height: 372mm; 
+  background: rgb(233, 210, 160);
+  color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin: auto;
+  font-family: Arial, sans-serif;
+  /* display: flex; */
+  /* justify-content: flex-start; */
+  position: relative;
+  overflow: hidden;
+}
+
+.menu-items-container-Custom {
+  width: 110mm; 
+  height: 372mm; 
+  background: rgb(233, 210, 160);
+  color: black;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin: auto;
+  font-family: Arial, sans-serif;
+  position: relative;
+  overflow: hidden;
+}
+.category-title {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 0;
+  margin: 0;
+}
+
+.strong {
+  text-transform: uppercase;
+  margin: 0 !important;
+  padding-bottom: 0 !important;
+}
+.menu-item-joined { 
   list-style-type: none; 
-  padding-left: 10%;
-  padding-right: 10%;
 }
-.menu-item {
-  list-style-type: none; /* Removes the bullet points */
+.category-list {
+  padding-right: 7%;
+  padding-left: 7%;
+}
+.split-container {
+  display: flex;
+  padding-right: 7%;
+  padding-left: 7%;
+}
+.split-div {
+  width: 50%;
+}
+.split-list {
+  padding: 0;
 }
 .menu-item-odd {
   text-align: center;
-  list-style-type: none; /* Removes the bullet points */
+  list-style-type: none;
 }
-.modal-btn {
-  background-color: rgba(72, 15, 228, 0.92) !important;
-  border-width: 1px;
-  border-radius: 2em;
-  margin: auto;
-  color: rgb(220, 210, 210);
+.menu-item {
+  list-style-type: none; 
 }
-.modal-btn:hover {
-  background-color: rgba(164, 41, 231, 0.79) !important;
-  transition: 0.4s;
-}
-.category-list {
-  padding-left: 10%;
-  padding-right: 10%;
-}
-.footer-div {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+@media print {
+  .print {
+    display: block;
+  }
+  .no-print {
+    display: none !important;
+  }
+
+  .app-container {
+    padding: 0 !important;
+    background-color: white;
+  }
+  .confirm-title {
+    display: none !important;
+  }
+  .button {
+    display: none;
+  }
+  .confirmation {
+    width: 100%;
+    background-color: white;
+    padding: 0 !important;
+  }
+  .menu-items-container-Regular {
+    width: 216mm; /* A4 width */
+    max-height: 372mm;/* A4 height */
+    max-height: 372mm;
+    color: black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    margin: auto;
+   
+    font-family: Arial, sans-serif;
+    position: relative;
+  }
 }
