Changed data structure to include the categories subtitles when presents and display in ui.. Had to go thru a lot of backbone changes

--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -50,7 +50,9 @@
   padding: 0;
   margin: 0;
 }
-
+.subtitle {
+  text-align: center;
+}
 .strong {
   text-transform: uppercase;
   margin: 0 !important;
