--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -2,8 +2,11 @@
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
 }
-
+/* .confirmation-preview-tools {
+  width: 100% !important;
+} */
 .confirmation {
+  display: flex;
   width: auto;
   margin: auto;
   background: rgba(22, 19, 19, 0.93);
@@ -16,7 +19,6 @@
   text-align: center;
   color: white;
   margin: auto;
- 
 }
 
 .menu-items-container-Regular {
