Refactored to avoid some props drilling. Created FrontMenu to simplify PreviewMenu component. Also Created FinalStep component for the same reason. Added some logic so the user can go back and forth from creating and viewing menu items and style while persistance of the data is implemented

--- a/src/components/PreviewTools.css
+++ b/src/components/PreviewTools.css
@@ -1,10 +1,15 @@
-.preview-tools-main {
-    padding: 5%;
-    width: 600px;
-}
+/* .preview-tools-main {
+    display: inline-block !important; 
+} */
 .preview-tools-container {
-    border: 1px solid white;
-    padding: 1%;
+    /* width: 576px; */
+    /* border: 1px solid white; */
+    /* margin-top: 55px; */
+    padding: 0 10% 0 10%;
+    /* height: 70vh; */
+    /* position: fixed; */
+    overflow: scroll;
+    background-color: black;
 }
 .line {
     display: flex;
