--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -2,17 +2,16 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     background-color: black;
-    width: 30%;
-    margin: auto;
-    padding: 2% 0 2% 0;
-    border-radius: 10px;
+    /* margin: auto; */
+    /* padding: 3% 0 3% 0; */
+    /* border-radius: 10px; */
 }
 .message {
     text-align: center;
 }
 .btn-group {
-    width: 40%;
+    /* width: 40%; */
     margin: auto;
 }
