--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -2,12 +2,11 @@
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
 }
-/* .confirmation-preview-tools {
-  width: 100% !important;
-} */
-.confirmation {
+
+.container-final-step {
   display: flex;
   width: auto;
+  /* width: fit-content; */
   margin: auto;
   background: rgba(22, 19, 19, 0.93);
   padding: 20px;
@@ -20,24 +19,13 @@
   color: white;
   margin: auto;
 }
-
-.menu-items-container-Regular {
-  width: 279mm; 
-  height: 372mm; 
-  background: rgb(233, 210, 160);
-  color: black;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  margin: auto;
-  font-family: Arial, sans-serif;
-  /* display: flex; */
-  /* justify-content: flex-start; */
-  position: relative;
-  overflow: hidden;
+.top {
+  display: flex;
 }
-
-.menu-items-container-Custom {
-  width: 110mm; 
-  height: 372mm; 
+.bottom {
+  display: flex !important;
+}
+.menu-items-container { 
   background: rgb(233, 210, 160);
   color: black;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -46,19 +34,16 @@
   position: relative;
   overflow: hidden;
 }
+
 .category-title {
   text-align: center;
   text-transform: uppercase;
-  padding: 0;
-  margin: 0;
 }
 .subtitle {
   text-align: center;
 }
 .strong {
   text-transform: uppercase;
-  margin: 0 !important;
-  padding-bottom: 0 !important;
 }
 .menu-item-joined { 
   list-style-type: none; 
@@ -108,13 +93,14 @@
     background-color: white;
     padding: 0 !important;
   }
-  .menu-items-container-Regular {
-    width: 216mm; /* A4 width */
-    max-height: 372mm;/* A4 height */
+  .menu-items-container {
+    /* width: 216mm; 
     max-height: 372mm;
+    max-height: 372mm; */
+    /* width: 100% !important; */
     color: black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin: auto;
+    margin: auto !important;
    
     font-family: Arial, sans-serif;
     position: relative;
