--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -5,8 +5,8 @@
 
 .container-final-step {
   display: flex;
+  gap: 20px; 
   width: auto;
-  /* width: fit-content; */
   margin: auto;
   background: rgba(22, 19, 19, 0.93);
   padding: 20px;
@@ -32,7 +32,6 @@
   margin: auto;
   font-family: Arial, sans-serif;
   position: relative;
-  overflow: hidden;
 }
 
 .category-title {
@@ -69,6 +68,10 @@
 }
 .menu-item {
   list-style-type: none; 
+}
+.final-step-div {
+  height: 200;
+  margin-bottom: 40px;
 }
 @media print {
   .print {
