--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   min-height: 100vh;
   /* color-scheme: light dark; */
   /* background-color: rgb(8, 8, 8); */
@@ -19,4 +20,7 @@
 }
 .dropDown-div {
   padding-top: 30vh;
+}
+html, body {
+  zoom: 100%; /* Prevents automatic scaling */
 }
