--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,52 @@
 .dropDown-div {
   padding-top: 30vh;
 }
-html, body {
-  zoom: 100%; /* Prevents automatic scaling */
+h3 {
+  margin: 0 !important
+}
+span {
+  margin: 0 !important;
+  padding: 0 !important;
+
+}
+
+@media print {
+  .print {
+    display: block;
+  }
+  .no-print {
+    display: none !important;
+  }
+
+  .app-container {
+    padding: 0 !important;
+    background-color: white;
+  }
+  .confirm-title {
+    display: none !important;
+  }
+  .button {
+    display: none;
+  }
+  .confirmation {
+    width: 100%;
+    background-color: white;
+    padding: 0 !important;
+  }
+  .menu-items-container {
+    color: black;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+   margin: 0;
+   padding: 0;
+    font-family: Arial, sans-serif;
+    position: relative;
+    width: 100vw !important;
+  }
+  .container-final-step {
+    padding: 0;
+    margin: 0;
+    gap: 0;
+    /* width: 100%; */
+    /* background-color: white; */
+  }
 }
