--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -14,10 +14,6 @@
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
 }
-html,
-body {
-  zoom: 100%;
-}
 
 .container-final-step {
   display: flex;
@@ -42,11 +38,14 @@ body {
   display: flex !important;
 }
 .menu-items-container {
-  margin: auto;
+  /* margin: auto; */
   font-family: Arial, sans-serif;
   position: relative;
+  /* min-height: 100vh; */
 }
-
+h3 {
+  margin: 0;
+}
 .category-title {
   text-align: center;
   text-transform: uppercase;
@@ -63,6 +62,11 @@ body {
 .menu-item-joined {
   list-style-type: none;
 }
+.soup-salad-label,
+.soup-salad-description {
+  font-family: "Pewter Corroded", sans-serif;
+
+}
 .category-list {
   width: 100%;
   margin: 0;
@@ -70,8 +74,8 @@ body {
 }
 .split-container {
   display: flex;
-  padding-right: 7%;
-  padding-left: 7%;
+  /* padding-right: 7%; */
+  /* padding-left: 7%; */
 }
 .split-div {
   width: 50%;
@@ -121,9 +125,17 @@ body {
   .menu-items-container {
     color: black;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin: auto !important;
-
+   margin: 0;
+   padding: 0;
     font-family: Arial, sans-serif;
     position: relative;
+    width: 100vw !important;
+  }
+  .container-final-step {
+    padding: 0;
+    margin: 0;
+    gap: 0;
+    /* width: 100%; */
+    /* background-color: white; */
   }
 }
