Added more dynamic style to CustomMenu. Also now user is able to delete selected images directly from the CustomMenu

--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -11,6 +11,11 @@
   --bs-gutter-x: 0;
   --bs-gutter-y: 0;
 }
+.item-description {
+  flex: 1 1 100%;
+  width: 100% !important;
+  display: block;
+}
 
 .container-final-step {
   display: flex;
