--- a/src/components/PreviewTools.css
+++ b/src/components/PreviewTools.css
@@ -1,5 +1,5 @@
 .preview-tools-container {
-  padding: 2% 2% 0 2%;
+  /* padding: 2% 2% 0 2%; */
   height: 75vh;
   overflow: scroll;
   position: sticky;
