--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -22,10 +22,9 @@
   .menus {
     width: 100% !important;
   }
-  .select-menu-div {
+  /* .select-menu-div {
     background-color: black;
-    /* width: 100%; */
-  }
+  } */
   /* Styling the button group */
   .btn-group {
     width: 100%;
