--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -60,6 +60,7 @@ h3 {
   text-align: center;
   text-transform: uppercase;
   font-family: "Pewter Corroded", sans-serif;
+  line-height: 1;
 }
 .subtitle {
   text-align: center;
@@ -106,7 +107,10 @@ h3 {
 .final-step-hidden {
   display: none;
 }
-
+/* .category-title,
+.category-title span {
+  line-height: 1;
+} */
 @media print {
   .print {
     display: block;
