--- a/src/components/PreviewTools.css
+++ b/src/components/PreviewTools.css
@@ -9,15 +9,23 @@
   width: 10px;
   height: 10px;
  }
+.label-container {
+  /* margin: 2px; */
+  padding: 5px;
+  background-color: rgb(44, 44, 45);;
+}
+
 .line {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: 0;
   padding: 0;
+  /* background-color: rgb(45, 44, 44); */
 }
 .li {
   list-style-type: none;
+  
 }
 .file-input {
   display: flex;
