--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -59,6 +59,8 @@ h3 {
   text-transform: uppercase;
   font-family: "Pewter Corroded", sans-serif;
   line-height: 1;
+  display: flex;
+  align-items: baseline;
 }
 .subtitle {
   text-align: center;
