--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -7,24 +7,63 @@
     height: 200;
     margin-bottom: 40px;
     justify-content: center;
+    position: relative;
   }
-.container-dropdown-menus {
+  .container-dropdown-menus {
+    position: relative;
     display: flex;
     justify-content: center;
     /* height: 200; */
     /* margin-bottom: 40px; */
     /* justify-content: center; */
     background-color: rgb(43, 96, 103);
+    /* background: radial-gradient(circle at center, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.9) 60%); */
+    /* position: fixed; */
     width: 100%;
     padding: 5%;
     margin: auto;
   }
+
+  /* .container {
+    width: 300px;
+    height: 200px;
+    background: white;
+    margin: 100px auto;
+    position: relative;
+  } */
+  
+  .spotlight {
+    position: absolute;
+    /* width: 400px;
+    height: 300px; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: radial-gradient(circle, rgba(255, 255, 150, 0.8) 10%, rgba(0, 0, 0, 0) 70%);
+    mix-blend-mode: screen;
+    z-index: -1;
+  }
+  
+
   .menus {
     width: 100% !important;
   }
-  /* .select-menu-div {
-    background-color: black;
-  } */
+
+/* .spotlight { */
+  /* padding: 2%; */
+  /* width: 100vw; */
+  /* height: 100vh; */
+  /* background: radial-gradient(circle at center, rgba(218, 156, 244, 0.2) 0%, rgba(0, 0, 0, 0.9) 60%); */
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
+  /* pointer-events: none; Ensures it does not block interactions */
+/* } */
+
+
+
+
+
   /* Styling the button group */
   .btn-group {
     width: 100%;
