--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   /* color: rgba(255, 255, 255, 0.87); */
   color: rgba(255, 255, 255, 0.899);
   /* background-color: #242424; */
+  /* background: radial-gradient(circle at center, rgba(255, 255, 255, 0.2) 0%, rgba(0, 0, 0, 0.9) 60%); */
 }
 .app-container {
   /* color: rgba(255, 255, 255, 0.87); */
