--- a/src/components/Sharables.css
+++ b/src/components/Sharables.css
@@ -1,10 +1,10 @@
 .content-container {
   position: relative;
-  border-left: 1px solid white; /* Side border */
-  border-right: 1px solid white; /* Side border */
-  border-bottom: 1px solid white; /* Bottom border */
-  padding-top: 20px; 
-  margin-top: 20px;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  padding-top: 20px;
+  margin-top: 20px !important;
 }
 
 .content {
