--- a/src/components/Sharables.css
+++ b/src/components/Sharables.css
@@ -1,15 +1,16 @@
 .content-container {
   position: relative;
-  border-left: 1px solid white;
+  /* border-left: 1px solid white;
   border-right: 1px solid white;
-  border-bottom: 1px solid white;
-  padding-top: 20px;
+  border-bottom: 1px solid white; */
+  padding-top: 10px !important;
   margin-top: 20px !important;
+  margin: auto;
 }
 
 .content {
   padding: 20px; /* Padding for content inside the container */
-  color: white; /* Text color */
+  /* color: white; Text color */
 }
 
 .content-container::before,
@@ -18,12 +19,13 @@
   position: absolute;
   top: 0;
   height: 1px; /* Border height */
-  background-color: white; /* Color of the top border */
+  /* background-color: white; Color of the top border */
 }
 
 .content-container::before {
   left: 0;
   width: 45%; /* Left segment width */
+
 }
 
 .content-container::after {
@@ -36,7 +38,7 @@
   /* top: -11px; Position the text above the top border */
   left: 50%; /* Center the text horizontally */
   transform: translateX(-50%); /* Adjust the centering */
-  color: white; /* Text color */
+  /* color: white; Text color */
   /* font-size: 1.5rem; Font size */
   z-index: 1; /* Ensure the text appears above the borders */
   width: 100%;
