Added View component to easily handle printing

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ span {
   margin: 0 !important;
   padding: 0 !important;
 }
-
+/* 
 @media print {
   .print {
     display: block;
@@ -157,4 +157,4 @@ span {
     margin: 0;
     gap: 0;
   }
-}
+} */
