--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
 #root {
-  margin: 0;
-  padding: 0;
   min-height: 100vh;
   background-image: linear-gradient(180deg, rgb(18, 91, 93), rgb(4, 4, 4));
   color: rgba(255, 255, 255, 0.899);
 }
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box; /* Ensures consistent box model behavior */
 }
 /* CSS Reset for text elements */
-p, span, h1, h2, h3, h4, h5, h6, div, strong, em {
-  padding: 0;
-  margin: 0;
-line-height: 1;
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+div,
+strong,
+em {
+  line-height: 1;
 }
-
 .app-container {
   padding: 1%;
 }
@@ -27,12 +30,8 @@ line-height: 1;
   text-align: center;
   margin-top: 35%;
   padding: 3% 0 3% 0;
-  /* text-transform: uppercase; */
   font-family: serif;
   font-size: 3rem;
-  /* border-radius: 10px;
-  box-shadow: 0 0 10px #c87be6, 0 0 20px rgb(208, 150, 231),
-  0 0 40px rgb(191, 77, 236), 0 0 80px #c167e4; */
 }
 .button-start {
   display: flex;
@@ -71,7 +70,6 @@ line-height: 1;
     rgba(0, 0, 0, 0) 70%
   );
 }
-
 .dropDown-div {
   position: relative;
   opacity: 1;
@@ -111,7 +109,6 @@ line-height: 1;
     opacity: 1;
   }
 }
-
 h3 {
   margin: 0 !important;
 }
@@ -119,42 +116,3 @@ span {
   margin: 0 !important;
   padding: 0 !important;
 }
-/* 
-@media print {
-  .print {
-    display: block;
-  }
-  .no-print {
-    display: none !important;
-  }
-
-  .app-container {
-    padding: 0 !important;
-    background-color: white;
-  }
-  .confirm-title {
-    display: none !important;
-  }
-  .button {
-    display: none;
-  }
-  .confirmation {
-    width: 100%;
-    background-color: white;
-    padding: 0 !important;
-  }
-  .menu-items-container {
-    color: black;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    position: relative;
-    width: 100vw !important;
-  }
-  .container-final-step {
-    padding: 0;
-    margin: 0;
-    gap: 0;
-  }
-} */
