Allowing user to create he/her own category from scratch

--- a/src/components/PreviewMenu.css
+++ b/src/components/PreviewMenu.css
@@ -2,6 +2,8 @@
   font-family: "Pewter Corroded";
   src: url("../assets/fonts/PewterDEMO-KCFonts.ttf") format("truetype");
  line-height: 1;
+ padding: 0;
+margin: 0;
 }
 .number {
   font-family: Arial, sans-serif;
