--- a/src/components/CustomMenu.css
+++ b/src/components/CustomMenu.css
@@ -1,3 +1,65 @@
+@font-face {
+  font-family: "Pewter Corroded";
+  src: url("../assets/fonts/PewterDEMO-KCFonts.ttf") format("truetype");
+  line-height: 1 !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
 .custom-lis {
   list-style-type: none;
+}
+.title {
+  font-family: "Pewter Corroded", sans-serif;
+  line-height: 1;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  vertical-align: middle;
+  transform: translateY(-2px);
+}
+
+.content-container {
+  position: relative;
+  /* border-left: 1px solid white;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white; */
+  padding-top: 10px !important;
+  margin-top: 20px !important;
+  margin: auto;
+}
+
+.content {
+  padding: 20px; /* Padding for content inside the container */
+  /* color: white;  */
+  font-weight: "600";
+}
+
+.content-container::before,
+.content-container::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 1px; /* Border height */
+  /* background-color: white; Color of the top border */
+}
+
+.content-container::before {
+  left: 0;
+  width: 45%; /* Left segment width */
+}
+
+.content-container::after {
+  right: 0;
+  width: 45%; /* Right segment width */
+}
+
+.gap-text {
+  position: absolute;
+  /* top: -11px; Position the text above the top border */
+  left: 50%; /* Center the text horizontally */
+  transform: translateX(-50%); /* Adjust the centering */
+  /* color: white; Text color */
+  /* font-size: 1.5rem; Font size */
+  z-index: 1; /* Ensure the text appears above the borders */
+  width: 100%;
 }
