--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,13 +8,14 @@
   display: flex;
   flex-direction: column;
   padding: 0 1% 0 1%;
-  font-family: "Pewter Corroded";
-  letter-spacing: 1px;
+  /* font-family: "Pewter Corroded"; */
+  /* letter-spacing: 1px; */
   font-weight: 600;
 }
 .footer-text {
   text-align: center;
   font-size: 14px;
+  font-weight: 200;
 }
 .guy-fieri {
   text-align: center;
