--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -12,7 +12,8 @@
   );
   /* mix-blend-mode: screen; */
 }
-.go-back {
+.go-back, 
+.print-document {
   display: flex;
   flex-direction: column;
   align-items: center !important;
